[gd_scene load_steps=6 format=2]

[ext_resource path="res://Themes/35Theme.tres" type="Theme" id=1]
[ext_resource path="res://Themes/30Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/UI/DropConfirm.gd" type="Script" id=3]
[ext_resource path="res://Icons/MenuBackground.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Buttons/Menu_Button_Tempate.tscn" type="PackedScene" id=7]

[node name="DropPanel" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -234.5
margin_top = -176.0
margin_right = 234.5
margin_bottom = 176.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="DropPanelContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMargin" type="Label" parent="DropPanelContainer"]
margin_right = 10.0
margin_bottom = 352.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[node name="MainNodes" type="VBoxContainer" parent="DropPanelContainer"]
margin_left = 14.0
margin_right = 455.0
margin_bottom = 352.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMargin" type="Label" parent="DropPanelContainer/MainNodes"]
visible = false
margin_right = 548.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 5 )
size_flags_vertical = 1

[node name="Label" type="Label" parent="DropPanelContainer/MainNodes"]
margin_right = 441.0
margin_bottom = 117.0
theme = ExtResource( 1 )
text = "How many do you want to drop?"
align = 1
autowrap = true

[node name="SpinBox" type="SpinBox" parent="DropPanelContainer/MainNodes"]
margin_top = 121.0
margin_right = 441.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 45 )
theme = ExtResource( 1 )
rounded = true
align = 1

[node name="Buttons" type="HBoxContainer" parent="DropPanelContainer/MainNodes"]
margin_top = 192.0
margin_right = 441.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
theme = ExtResource( 2 )

[node name="Drop All" parent="DropPanelContainer/MainNodes/Buttons" instance=ExtResource( 7 )]
margin_right = 144.0
margin_bottom = 100.0

[node name="Drop Selected" parent="DropPanelContainer/MainNodes/Buttons" instance=ExtResource( 7 )]
margin_left = 148.0
margin_right = 292.0
margin_bottom = 100.0

[node name="Close" parent="DropPanelContainer/MainNodes/Buttons" instance=ExtResource( 7 )]
margin_left = 296.0
margin_right = 441.0
margin_bottom = 100.0

[node name="BottomMargin" type="Label" parent="DropPanelContainer/MainNodes"]
margin_top = 296.0
margin_right = 441.0
margin_bottom = 310.0
rect_min_size = Vector2( 0, 10 )
size_flags_vertical = 1

[node name="RightMargin" type="Label" parent="DropPanelContainer"]
margin_left = 459.0
margin_right = 469.0
margin_bottom = 352.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3
